--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 #navigation{
 	position: fixed;
 	background-color: #6495ED;
-	width: 100%
-	top: 0%
+	width: 100%;
+	top: 0%;
 }
-#navigation i1{
+#navigation ul{
 	list-style-type: none;
 	overflow: hidden;
 	display: inline-block;
@@ -20,6 +20,7 @@
 	font-size: 32px;
 }
 #header{
+	background-color: #6495ED;
 	font-size: 64px;
 	font-weight: bold;
 	color: white;
