--- a/css/screen.css
+++ b/css/screen.css
@@ -52,3 +52,25 @@ nav a.active {
 	font-weight: bold;
 	color: white;
 }
+
+/*CSS for the Buttons*/
+
+.tabs{
+	background-color: #6495ED;
+	color: white;
+	width: 75%;
+	border: 5px solid black;
+	font-weight: bold;
+	transition: .1s;
+}
+.tabs h3{
+	font-size: 24px;
+}
+.active, .tab:hover {
+	background-color: #005BFF;
+}
+.tabcontent{
+	padding: 20px 0;
+	display: none;
+	overflow: hidden;
+}
