--- a/css/screen.css
+++ b/css/screen.css
@@ -46,11 +46,53 @@ nav a.active {
 }
 
 #header{
+	margin-top: 50px;
+	background-color: #6495ED; 
 	font-size: 64px;
 	font-weight: bold;
 	color: white;
 }
-/* Form Page */
+
+/*CSS for the Second Page*/
+
+/*CSS for the paragraph and headers*/
+html{
+	text-align: center;
+}
+#title{
+	margin-top: 15px;
+	font-size: 30px;
+}
+
+#information{
+	font-size: 20px;
+	margin-top: 10px;
+	margin-bottom: 10px
+}
+
+
+/*CSS for the Buttons*/
+.tabs{
+	background-color: #6495ED;
+	color: white;
+	width: 75%;
+	border: 5px solid black;
+	font-weight: bold;
+	transition: .1s;
+}
+.tabs h3{
+	font-size: 24px;
+}
+.active, .tab:hover {
+	background-color: #005BFF;
+}
+.tabcontent{
+	padding: 20px 0;
+	display: none;
+	overflow: hidden;
+}
+
+/*Form Page */
 #buttons{
-  display: block;
+	display: block;
 }
