--- a/css/screen.css
+++ b/css/screen.css
@@ -64,10 +64,9 @@ html{
 	font-size: 30px;
 }
 
-#information{
+.information{
 	font-size: 20px;
-	margin-top: 10px;
-	margin-bottom: 10px
+	margin: 10px 15%;
 }
 
 
@@ -90,6 +89,15 @@ html{
 	padding: 20px 0;
 	display: none;
 	overflow: hidden;
+}
+#tab1{
+	text-align: left;
+	margin: 15px 5%;
+	font-size: 16px;
+}
+#tab1 h4{
+	font-size: 20px;
+	font-weight: bold;
 }
 
 /*Form Page */
