--- a/css/screen.css
+++ b/css/screen.css
@@ -97,7 +97,11 @@ html{
 }
 #tab1 h4{
 	font-size: 20px;
+	margin-bottom: 10px;
 	font-weight: bold;
+}
+#tab1 p{
+	margin-bottom: 10px;
 }
 
 /*Form Page */
