--- a/css/screen.css
+++ b/css/screen.css
@@ -90,21 +90,28 @@ html{
 	padding: 20px 0;
 	display: none;
 	overflow: hidden;
-}
-#tab1{
 	text-align: left;
 	margin: 15px 5%;
 	font-size: 16px;
 }
-#tab1 h4{
+.tabcontent h4{
 	font-size: 20px;
 	margin-bottom: 10px;
 	font-weight: bold;
 }
-#tab1 p{
+.tabcontent p{
 	margin-bottom: 10px;
 }
-
+.tabcontent ol{
+	list-style-type: upper-roman;
+}
+#tab2 h4{
+	font-style: italic;
+}
+#tab3 img{
+	float: left;
+	margin-left: 5%;
+}
 /*Form Page */
 #buttons{
 	display: block;
