--- a/css/screen.css
+++ b/css/screen.css
@@ -57,9 +57,11 @@ nav a.active {
 
 /*CSS for the Pictures*/
 #photos img{
-	height: 100px;
-	width: 100px;
+	height: 200px;
+	width: 200px;
 	border-radius: 50%;
+	margin-right: 10px;
+	margin-top: 25px;
 }
 /*CSS for the paragraph and headers*/
 html{
