--- a/css/screen.css
+++ b/css/screen.css
@@ -166,7 +166,7 @@ html{
 	margin-left: 5%;
 }
 
-/*Form Page*/
+/* CSS for Join Us Page */
 /*Vertical line*/
 .divline{
   border-left: 3px solid black;
