--- a/css/screen.css
+++ b/css/screen.css
@@ -167,6 +167,12 @@ html{
 }
 
 /* CSS for Join Us Page */
+.content h2{
+  font-size: 24px;
+}
+.content h3{
+  font-size: 18.72px;
+}
 /*Vertical line*/
 .divline{
   border-left: 3px solid black;
