--- a/css/screen.css
+++ b/css/screen.css
@@ -167,8 +167,8 @@ html{
 }
 
 /* CSS for Join Us Page */
-.content h2{
-  font-size: 24px;
+.content {
+  font-size: 19px;
   font-weight: bold;
   margin-top: 3%;
 }
