adding more space for smaller screen

--- a/css/screen.css
+++ b/css/screen.css
@@ -362,9 +362,25 @@ input[type=submit]:hover {
 	 #sc_container{
 	  	visibility: hidden;
 	 }
+	
 	.content {
   		font-size: 28.5px;
 		margin: 1%;
+	}
+	
+	#firstname{
+		  margin-top: 15px;
+		  margin-bottom: 20px;
+	}
+	
+	#lastname{
+		  margin-top: 15px;
+		  margin-bottom: 20px;
+	}
+	
+	#emailid{
+		  margin-top: 15px;
+		  margin-bottom: 2px;
 	}
 }
 /* Bigger than 600 pixel and smaller than 1024 pixel*/
