--- a/css/screen.css
+++ b/css/screen.css
@@ -26,7 +26,7 @@ nav a.active {
 	background-color: #005BFF;
 }
 
-/*Logo in Index*/
+/*Index page*/
 .logo {
 	position: absolute;
 	overflow: hidden;
@@ -81,7 +81,6 @@ video {
 }
 
 /* End of CSS for index page */
-
 #header{
 	margin-top: 50px;
 	background-color: #6495ED; 
