--- a/css/screen.css
+++ b/css/screen.css
@@ -524,3 +524,56 @@ input[type=submit]:hover {
 	#sc_container{
     		top: 35%;
  	}
+}
+
+/* Media that more than 1600 pixel */
+@media screen and (min-width: 1600px){
+	.logo {
+		position: absolute;
+		overflow: hidden;
+		top: 48px;
+		left: 45px;
+		width: 180px;
+	}
+	
+	.title {
+		position: absolute;
+		float: left;
+		top: 95px;
+		left: 310px;
+		font-size: 55px;
+		color: #6495ED;
+		max-width: 100%;
+	}
+	
+	video {
+		width: 30%;
+		position: absolute;
+		top: 250px;
+		left: 120px;
+	}
+	
+	.quote p {
+		position: absolute;
+		float: left;
+		font-family: 'Montserrat';
+		font-size: 24px;
+		top: 300px;
+		left: 720px;
+		padding: 18px;
+	}
+	.argument p {
+		position: absolute;
+		float: left;
+		font-size: 24px;
+		top: 480px;
+		left: 800px;
+	}
+	
+	.join-us p {
+		position: relative;
+		font-size: 23px;
+		top: 550px;
+		left: 400px;
+	}
+}
