--- a/screen.css
+++ b/screen.css
@@ -57,8 +57,8 @@ nav a.active {
 
 /*CSS for the Pictures*/
 #photos img{
-	height: 200px;
-	width: 200px;
+	height: 100px;
+	width: 100px;
 	border-radius: 50%;
 	margin-right: 10px;
 	margin-top: 25px;
@@ -131,4 +131,16 @@ html{
 /*Form Page */
 #buttons{
 	display: block;
+}
+@media screen and (min-width: 768px){
+	#photos img{
+		width: 150px;
+		height: 150px;
+	}
+}
+@media screen and (min-width: 992px){
+	#photos img{
+		width: 200px;
+		height: 200px;
+	}
 }
