--- a/css/screen.css
+++ b/css/screen.css
@@ -94,8 +94,8 @@ video {
 
 /*CSS for the Pictures*/
 #photos img{
-	height: 200px;
-	width: 200px;
+	height: 100px;
+	width: 100px;
 	border-radius: 50%;
 	margin-right: 10px;
 	margin-top: 25px;
@@ -525,3 +525,15 @@ input[type=submit]:hover {
 	#sc_container{
     		top: 35%;
  	}
+@media screen and (min-width: 768px){
+	#photos img{
+		width: 150px;
+		height: 150px;
+	}
+}
+@media screen and (min-width: 992px){
+	#photos img{
+		width: 200px;
+		height: 200px;
+	}
+}
