Changing the navigation bar position

--- a/css/screen.css
+++ b/css/screen.css
@@ -1,6 +1,6 @@
 /* Navigation Bar*/
 nav {
-	position: fixed;
+	position: absolute;
 	text-align: center;
 	overflow: hidden;
 	background-color: #6495ED;
