--- a/css/screen.css
+++ b/css/screen.css
@@ -87,6 +87,7 @@ video {
 	font-size: 64px;
 	font-weight: bold;
 	color: white;
+	font-family: 'Abril Fatface', cursive;
 }
 
 /*CSS for the Second Page*/
@@ -106,11 +107,13 @@ html{
 #title{
 	margin-top: 15px;
 	font-size: 30px;
+	font-family: 'Satisfy', cursive;
 }
 
 .information{
 	font-size: 12px;
 	margin: 10px 2%;
+	font-family: 'Barlow', sans-serif;
 }
 
 /*CSS for the Buttons and tab content*/
@@ -122,9 +125,11 @@ html{
 	font-weight: bold;
 	transition: .1s;
 	font-size: 24px;
+	font-family: 'Barlow', sans-serif;
 }
 .tabs h3{
 	font-size: 24px;
+	font-family: 'Abril Fatface', cursive;
 }
 .active, .tab:hover {
 	background-color: #005BFF;
