--- a/css/screen.css
+++ b/css/screen.css
@@ -168,7 +168,7 @@ html{
 #tab3 img{
 	float: left;
 	margin-left: 15%;
-	height: 250px;
+	height: 150px;
 	width: auto;
 }
 #tab3 p{
@@ -553,7 +553,7 @@ input[type=submit]:hover {
 	font-size: 20px;
 	}
 	#tab3 img{
-		height: 400px;
+		height: 250px;
 	}
 	#tab3 p{
 	font-size: 20px;
@@ -573,8 +573,11 @@ input[type=submit]:hover {
 	}
 	.tabcontent h4{
 		font-size: 24px;
+	}
+	#tab3 img{
+		height: 400px;
+	}
 }
-
 /* Media that more than 1600 pixel */
 @media screen and (min-width: 1600px){
 	.logo {
