added css changes for pg 3
in this size: Bigger than 300 pixels and smaller than 480 pixel

--- a/css/screen.css
+++ b/css/screen.css
@@ -390,6 +390,30 @@ input[type=submit]:hover {
 	}
 
 }
+/* Bigger than 300 pixel and smaller than 480 pixel*/
+@media screen and (min-width: 300px) and (max-width: 480px) {
+	.divline{
+		visibility: hidden;
+	}
+	#full_form{
+		width: 90%;
+	}
+	#sc_container{
+		visibility: hidden;
+	}
+	#firstname{
+		margin-top: 15px;
+		margin-bottom: 20px;
+	}
+	#lastname{
+		margin-top: 15px;
+		margin-bottom: 20px;
+	}
+	#emailid{
+		margin-top: 15px;
+		margin-bottom: 2px;
+	}
+}
 /* Bigger than 600 pixel and smaller than 1024 pixel*/
 @media screen and (min-width: 600px) and (max-width: 1024px) {
 	.logo {
