--- a/css/screen.css
+++ b/css/screen.css
@@ -414,21 +414,21 @@ input[type=submit]:hover {
 		margin-bottom: 2px;
 	}
 }
-/* Bigger than 600 pixel and smaller than 1024 pixel*/
-@media screen and (min-width: 600px) and (max-width: 1024px) {
+/* Bigger than 600 pixel*/
+@media screen and (min-width: 600px) {
 	.logo {
 		position: absolute;
 		overflow: hidden;
 		top: 48px;
-		left: 0px;
-		width: 90px;
+		left: 50px;
+		width: 15%;
 	}
 	
 	.title {
 		position: absolute;
 		float: left;
 		top: 85px;
-		left: 115px;
+		left: 215px;
 		font-size: 25px;
 		color: #6495ED;
 		max-width: 100%;
@@ -470,55 +470,57 @@ input[type=submit]:hover {
 	  }
 }
 
-/* Bigger than 1024 pixel and smaller than 1600 pixel*/
-@media screen and (min-width: 1024px) and (max-width: 1600px) {
+/* Bigger than 1024 pixel*/
+@media screen and (min-width: 1024px) {
 	.logo {
 		position: absolute;
 		overflow: hidden;
 		top: 48px;
-		left: 0px;
-		width: 120px;
+		left: 100px;
+		width: 150px;
 	}
 	
 	.title {
 		position: absolute;
 		float: left;
 		top: 95px;
-		left: 150px;
-		font-size: 30px;
+		left: 280px;
+		font-size: 40px;
 		color: #6495ED;
 		max-width: 100%;
 	}
 	
 	video {
-		width: 70%;
+		width: 50%;
 		position: absolute;
-		top: 200px;
-		left: 120px;
+		top: 250px;
+		left: 50px;
 	}
 	
 	.quote p {
 		position: absolute;
 		float: left;
 		font-family: 'Montserrat';
-		font-size: 23px;
-		top: 600px;
-		left: 0px;
+		font-size: 25px;
+		top: 250px;
+		left: 850px;
 		padding: 18px;
 	}
 	.argument p {
 		position: absolute;
 		float: left;
 		font-size: 23px;
-		top: 680px;
-		left: 20px;
+		top: 450px;
+		left: 850px;
+		right: inherit;
 	}
 	
 	.join-us p {
-		position: relative;
+		position: absolute;
 		font-size: 23px;
-		top: 730px;
-		left: 0px;
+		top: 500px;
+		left: 1000px;
+		right: inherit;
 	}
 	
 	#sc_container{
@@ -577,7 +579,7 @@ input[type=submit]:hover {
 		position: absolute;
 		overflow: hidden;
 		top: 48px;
-		left: 150px;
+		left: 45px;
 		width: 180px;
 	}
 	
@@ -585,7 +587,7 @@ input[type=submit]:hover {
 		position: absolute;
 		float: left;
 		top: 95px;
-		left: 380px;
+		left: 310px;
 		font-size: 55px;
 		color: #6495ED;
 		max-width: 100%;
