--- a/css/screen.css
+++ b/css/screen.css
@@ -559,6 +559,9 @@ div.con_imgs{
 	#sc_container{
 		visibility: visible;
 	}
+	#full_form{
+		width: 50%;
+	}
 }
 @media screen and (min-width: 768px){
 	#photos img{
