--- a/css/screen.css
+++ b/css/screen.css
@@ -244,7 +244,7 @@ html{
   margin-bottom: 1px;
 }
 fieldset{
-  border-right: none;
+  border: 0px solid #fff;
 }
 input[type=text], input[type=email]{
   border: 3px solid;
