adding padding to add space between pictures and form

--- a/css/screen.css
+++ b/css/screen.css
@@ -236,6 +236,7 @@ html{
   font-size: 20px;
   text-align: center;
   letter-spacing: 2px;
+  padding-bottom: 30px;
 }
 #firstname{
   margin-top: 8px;
