--- a/css/screen.css
+++ b/css/screen.css
@@ -29,83 +29,68 @@ nav a {
     text-decoration: none;
 }
 
-/* Index Page */
+/*Index page*/
 .logo {
-    position: fixed;
-    overflow: hidden;
-    top: 6%;
-    left: 4%;
-    width: 25%;
+  position: absolute;
+  overflow: hidden;
+  top: 48px;
+  left: 200px;
 }
 
 .title {
-    position: absolute;
-    font-family: sans-serif;
-    top: 8%;
-    left: 25%;
-    float: none;
-    font-size: 20px;
-    padding: 14px 18px;
-    color: #6495ed;
+  font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
+  position: absolute;
+  float: left;
+  top: 145px;
+  left: 480px;
+  font-size: 50px;
+  color: #6495ED;
+  max-width: 100%;
 }
 
 video {
-    position: absolute;
-    float: none;
-    top: 20%;
-    left: 8%;
-    width: 80%;
+  position: absolute;
+  float: left;
+  top: 400px;
+  left: 100px;
 }
 
 .quote p {
-    position: absolute;
-    float: none;
-    top: 45%;
-    left: 5%;
-    padding: 18px 16px;
-    font-size: 15px;
-    font-family: 'Montserrat';
+  position: absolute;
+  float: left;
+  font-family: 'Montserrat';
+  font-size: 25px;
+  top: 400px;
+  left: 800px;
+  padding: 18px;
 }
-
 .argument p {
-    position: absolute;
-    float: none;
-    font-family: 'Montserrat';
-    padding: 18px 16px;
-    font-size: 15px;
-    text-align: center;
-    top: 55%;
+  position: absolute;
+  font-size: 25px;
+  top: 555px;
+  left: 800px;
 }
 
 .join-us p {
-    position: absolute;
-    float: none;
-    font-size: 25px;
-    top: 65%;
-    left: 3%;
-    padding: 18px 16px;
-    font-family: 'Montserrat';
-    text-align: center;
+  position: absolute;
+  font-size: 25px;
+  top: 650px;
+  left: 1000px;
 }
 
 .join-us a {
-    position: absolute;
-    float: none;
-    font-size: 30px;
-    padding: 18px 16px;
-    top: 80%;
-    left: 30%;
-    font-family: 'Montserrat';
-    background-color: #6495ed;
-    text-decoration: none;
-    color: white;
-    border: 3px solid black;
+  background-color: #6495ED;
+  padding: 10px 5px;
+  text-decoration: none;
+  border: 3px solid black;
 }
 
 .join-us a:hover {
-    background-color: #005bff;
+  background-color: #005BFF;
+  border: 3px solid black;
 }
-/* End Of Index Page */
+
+/* End of CSS for index page */
 
 #header{
   margin-top: 50px;
@@ -376,7 +361,7 @@ div.con_imgs{
 }
 /*End of CSS for Join Us Page */
 
-/* Media Queries */
+/* Media Queries /
 @media screen and (min-width: 800px) {
     .logo {
         position: absolute;
@@ -816,8 +801,8 @@ div.con_imgs{
         left: 65%;
         right: 10%;
     }
-}
-/* Mobile Device/
+} */
+/* Mobile Device */
 @media screen and (min-width: 300px) {
   .logo {
     position: absolute;
@@ -866,7 +851,7 @@ div.con_imgs{
   }
 }
 
-/* Bigger than 600 pixel/
+/* Bigger than 600 pixel */
 @media screen and (min-width: 600px) {
   .logo {
     position: absolute;
@@ -914,7 +899,7 @@ div.con_imgs{
   }
 }
 
-/* Bigger than 1024 pixel/
+/* Bigger than 1024 pixel */
 @media screen and (min-width: 1024px) {
   .logo {
     position: absolute;
@@ -964,7 +949,7 @@ div.con_imgs{
     padding: 18px;
   }	
  }
-*/
+
 @media screen and (min-width: 510px){
   #tab3 p{
     font-size: 16px;
