--- a/css/screen.css
+++ b/css/screen.css
@@ -361,447 +361,6 @@ div.con_imgs{
 }
 /*End of CSS for Join Us Page */
 
-/* Media Queries /
-@media screen and (min-width: 800px) {
-    .logo {
-        position: absolute;
-        overflow: hidden;
-        width: 15%;
-        top: 15%;
-        left: 5%;
-    }
-
-    .title {
-        position: absolute;
-        float: none;
-        top: 25%;
-        left: 20%;
-        font-size: 25px;
-    }
-
-    video {
-        position: absolute;
-        float: none;
-        top: 60%;
-        left: 5%;
-        width: 50%;
-    }
-
-    .quote p {
-        position: absolute;
-        float: none;
-        font-family: 'Montserrat';
-        top: 65%;
-        left: 55%;
-        font-size: 18px;
-    }
-
-    .argument p {
-        position: absolute;
-        float: none;
-        font-family: 'Montserrat';
-        top: 120%;
-        left: 20%;
-        right: 20%;
-        font-size: 20px;
-    }
-
-    .join-us p {
-        position: absolute;
-        float: none;
-        font-family: 'Montserrat';
-        top: 145%;
-        left: 25%;
-
-    }
-
-    .join-us a {
-        position: absolute;
-        float: none;
-        font-family: 'Montserrat';
-        top: 165%;
-        left: 40%;
-        right: 40%;
-    }
-}
-
-@media screen and (min-width: 1000px) {
-    nav {
-        position: absolute;
-        text-align: center;
-        overflow: hidden;
-        background-color: #6495ed;
-        top: 0;
-        width: 100%;
-    }
-    
-    nav li {
-        float: none;
-        display: inline-block;
-        text-align: center;
-        padding: 14px 16px;
-    }
-    
-    nav li:hover {
-        background-color: #005bff;
-    }
-    
-    #nav-active {
-        background-color: #005bff;
-    }
-    
-    nav a {
-        color: white;
-        font-size: 35px;
-        text-decoration: none;
-    }
-
-    .logo {
-        position: absolute;
-        overflow: hidden;
-        width: 20%;
-        top: 5%;
-        left: 5%;
-    }
-
-    .title {
-        position: absolute;
-        float: none;
-        top: 10%;
-        left: 25%;
-        font-size: 32px;
-    }
-
-    video {
-        position: absolute;
-        float: none;
-        top: 25%;
-        left: 5%;
-        width: 90%;
-    }
-
-    .quote p {
-        position: absolute;
-        float: none;
-        font-family: 'Montserrat';
-        top: 65%;
-        left: 5%;
-        font-size: 25px;
-    }
-
-    .argument p {
-        position: absolute;
-        float: none;
-        font-family: 'Montserrat';
-        top: 75%;
-        left: 20%;
-        right: 20%;
-        font-size: 30px;
-    }
-
-    .join-us p {
-        position: absolute;
-        float: none;
-        font-family: 'Montserrat';
-        top: 85%;
-        left: 30%;
-    }
-
-    .join-us a {
-        position: absolute;
-        float: none;
-        font-family: 'Montserrat';
-        top: 90%;
-        left: 40%;
-        right: 45%;
-    }
-  
-    #sc_container{
-    top: 30%;
-  }
-}
-
-@media screen and (min-width: 1300px) {
-    nav {
-        position: absolute;
-        text-align: center;
-        overflow: hidden;
-        background-color: #6495ed;
-        top: 0;
-        width: 100%;
-    }
-    
-    nav li {
-        float: none;
-        display: inline-block;
-        text-align: center;
-        padding: 14px 16px;
-    }
-    
-    nav li:hover {
-        background-color: #005bff;
-    }
-    
-    #nav-active {
-        background-color: #005bff;
-    }
-    
-    nav a {
-        color: white;
-        font-size: 45px;
-        text-decoration: none;
-    }
-
-    .logo {
-        position: absolute;
-        overflow: hidden;
-        width: 20%;
-        top: 10%;
-        left: 5%;
-    }
-
-    .title {
-        position: absolute;
-        float: none;
-        top: 20%;
-        left: 30%;
-        font-size: 40px;
-    }
-
-    video {
-        position: absolute;
-        float: none;
-        top: 45%;
-        left: 5%;
-        width: 90%;
-    }
-
-    .quote p {
-        position: absolute;
-        float: none;
-        font-family: 'Montserrat';
-        top: 115%;
-        left: 5%;
-        right: 3%;
-        font-size: 35px;
-        padding: 16px 18px;
-    }
-
-    .argument p {
-        position: absolute;
-        float: none;
-        font-family: 'Montserrat';
-        top: 125%;
-        left: 20%;
-        right: 20%;
-        font-size: 40px;
-    }
-
-    .join-us p {
-        position: absolute;
-        float: none;
-        font-family: 'Montserrat';
-        top: 140%;
-        left: 25%;
-        font-size: 40px;
-    }
-
-    .join-us a {
-        position: absolute;
-        float: none;
-        font-family: 'Montserrat';
-        top: 150%;
-        left: 43%;
-        right: 45%;
-    }
-    #sc_container{
-      top: 28%;
-    }
-}
-
-@media screen and (min-width: 1100px) {
-    nav {
-        position: absolute;
-        text-align: center;
-        overflow: hidden;
-        background-color: #6495ed;
-        top: 0;
-        width: 100%;
-    }
-    
-    nav li {
-        float: none;
-        display: inline-block;
-        text-align: center;
-        padding: 14px 16px;
-    }
-    
-    nav li:hover {
-        background-color: #005bff;
-    }
-    
-    #nav-active {
-        background-color: #005bff;
-    }
-    
-    nav a {
-        color: white;
-        font-size: 35px;
-        text-decoration: none;
-    }
-
-    .logo {
-        position: absolute;
-        overflow: hidden;
-        width: 15%;
-        top: 10%;
-        left: 5%;
-    }
-
-    .title {
-        position: absolute;
-        float: none;
-        top: 13%;
-        left: 20%;
-        font-size: 45px;
-    }
-
-    video {
-        position: absolute;
-        float: none;
-        top: 35%;
-        left: 5%;
-        width: 40%;
-    }
-
-    .quote p {
-        position: absolute;
-        float: none;
-        font-family: 'Montserrat';
-        top: 35%;
-        left: 48%;
-        font-size: 25px;
-    }
-
-    .argument p {
-        position: absolute;
-        float: none;
-        font-family: 'Montserrat';
-        top: 65%;
-        left: 20%;
-        right: 20%;
-        font-size: 30px;
-    }
-
-    .join-us p {
-        position: absolute;
-        float: none;
-        font-family: 'Montserrat';
-        top: 78%;
-        left: 30%;
-    }
-
-    .join-us a {
-        position: absolute;
-        text-align: center;
-        float: none;
-        font-family: 'Montserrat';
-        top: 85%;
-        left: 40%;
-        right: 45%;
-    }
-}
-
-@media screen and (min-width: 1600px) {
-    nav {
-        position: absolute;
-        text-align: center;
-        overflow: hidden;
-        background-color: #6495ed;
-        top: 0;
-        width: 100%;
-    }
-    
-    nav li {
-        float: none;
-        display: inline-block;
-        text-align: center;
-        padding: 14px 16px;
-    }
-    
-    nav li:hover {
-        background-color: #005bff;
-    }
-    
-    #nav-active {
-        background-color: #005bff;
-    }
-    
-    nav a {
-        color: white;
-        font-size: 35px;
-        text-decoration: none;
-    }
-
-    .logo {
-        position: absolute;
-        overflow: hidden;
-        width: 13%;
-        top: 8%;
-        left: 5%;
-    }
-
-    .title {
-        position: absolute;
-        float: none;
-        top: 15%;
-        left: 20%;
-        font-size: 45px;
-    }
-
-    video {
-        position: absolute;
-        float: none;
-        top: 35%;
-        left: 5%;
-        width: 50%;
-    }
-
-    .quote p {
-        position: absolute;
-        float: none;
-        font-family: 'Montserrat';
-        top: 35%;
-        left: 55%;
-        font-size: 25px;
-    }
-
-    .argument p {
-        position: absolute;
-        float: none;
-        font-family: 'Montserrat';
-        top: 45%;
-        left: 55%;
-        right: 5%;
-    }
-
-    .join-us p {
-        position: absolute;
-        float: none;
-        font-family: 'Montserrat';
-        top: 65%;
-        left: 58%;
-    }
-
-    .join-us a {
-        position: absolute;
-        float: none;
-        font-family: 'Montserrat';
-        top: 80%;
-        left: 65%;
-        right: 10%;
-    }
-} */
 /* Mobile Device */
 @media screen and (min-width: 300px) {
   .logo {
@@ -973,6 +532,24 @@ div.con_imgs{
   .divline{
     visibility: visible;
   }
+  .logo{
+    top: 100px;
+  }
+  .title{
+    top: 140px;
+  }
+  video{
+    top: 250px;
+  }
+  .quote p{
+    top: 550px;
+  }
+  .argument p{
+    top: 625px;
+  }
+  .join-us p{
+    top: 700px;
+  }
 }
 
 @media screen and (min-width: 768px){
@@ -1011,6 +588,12 @@ div.con_imgs{
     margin-top: 15px;
     margin-bottom: 2px;
   }
+  nav li{
+    padding: 20px 16px;
+  }
+  nav a{
+    font-size: 32px;
+  }
 }
 
 @media screen and (min-width: 992px){
@@ -1043,6 +626,12 @@ div.con_imgs{
   div.con_imgs{
     visibility: visible;
     width: 31%;
+  }
+  nav li{
+    padding: 20px 16px;
+  }
+  nav a{
+    font-size: 40px;
   }
 }
 
