--- a/css/screen.css
+++ b/css/screen.css
@@ -366,14 +366,14 @@ div.con_imgs{
   .logo {
     position: absolute;
     overflow: hidden;
-    top: 48px;
+    top: 60px;
     left: 0px;
     width: 90px;
   }
   .title {
     position: absolute;
     float: left;
-    top: 85px;
+    top: 100px;
     left: 115px;
     font-size: 13px;
     color: #6495ED;
@@ -415,18 +415,20 @@ div.con_imgs{
   .logo {
     position: absolute;
     overflow: hidden;
-    top: 48px;
+    top: 60px;
     left: 50px;
     width: 15%;
+    margin-top: 15px;
   }
   .title {
     position: absolute;
     float: left;
-    top: 85px;
+    top: 100px;
     left: 215px;
     font-size: 25px;
     color: #6495ED;
     max-width: 100%;
+    margin-top: 20px;
   }
   video {
     width: 70%;
@@ -491,6 +493,7 @@ div.con_imgs{
     top: 250px;
     left: 580px;
     padding: 18px;
+    margin-top: 30px;
   }
   .argument p {
     position: absolute;
